# tauri-plugin-drag-and-drop-wayland

./: .npmrc  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  models.rs
